# workroom

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release-publish.yml  release-readiness.yml
docs/: COMPLETION_ROADMAP.md  WORKROOM_DOCTRINE.md
docs/examples/: codex-facing-intake-protocol-v1.md  company-briefing-work-spec-v1.md  goal-intake-context-v1.md  mcp-usability-configuration-v1.md  practical-e2e-goal-run-v1.md  replay-audit-evaluation-v1.md
docs/plans/: 2026-05-31-landing-artifact-loop-design.md  (+147 more)
tests/: __init__.py  kernel_dependency_assertions.py  test_agent_session.py  test_chain_continuation.py  test_company_briefing.py  test_company_evidence_chain.py  test_company_registry.py  test_company_runbooks.py  test_cross_role_brief.py  test_cross_role_task_quality.py  test_delivery_planning.py  test_delivery_review.py  test_design_review.py  test_devops_operations.py  test_github_pages_deploy.py  test_goal_intake.py  test_goal_run_report.py  test_growth_brief.py  test_growth_review.py  test_implementation_plan_quality.py  test_implementation_planning.py  test_kernel_gateway.py  test_landing_artifact.py  test_landing_qa.py  test_local_routes.py  test_local_work_module.py  test_mcp_manifest.py  test_mcp_server.py  test_models.py  test_package_import.py  test_planner.py  test_release_artifact.py  test_release_candidate_audit.py  test_release_notes.py  test_release_quality.py  test_release_readiness.py  test_release_readiness_gate.py  test_run_inspection.py  test_runbook_closeout_packet.py  test_runbook_context_transfer.py  (+10 more)
(+72 files in other folders)
