[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agency-workroom"
version = "0.1.0"
description = "External Workroom workflow layer consuming the standalone Kernel authority package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kernel @ file:../Kernel",
    "mcp>=1.27,<2",
]
authors = [
    { name = "Mandate maintainers" },
]
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]

[project.urls]
Repository = "https://github.com/gotlostinparadise/workroom"
Issues = "https://github.com/gotlostinparadise/workroom/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agency_workroom*"]
namespaces = false

[project.scripts]
workroom-release-readiness = "agency_workroom.release_readiness_gate:_main"
